# ipprefixsearch

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/api/: main.py  routes.py
src/domain/: models.py
src/infrastructure/: ip_utils.py  linear_prefix_store.py  prefix_store.py  prefix_store_factory.py  radix_prefix_store.py
src/services/: ip_lookup_service.py
tests/: test_ip_lookup_service.py  test_ip_utils.py  test_prefix_store.py
tests/benchmarks/: test_performance.py
